# fastAPI-foods

./: .gitignore  README.md
.github/: FUNDING.yml
fast_zero/: README.md  database.db  pyproject.toml
fast_zero/fast_zero/: app.py  models.py
fast_zero/fast_zero/database/: database.py
fast_zero/fast_zero/models/: models.py
fast_zero/fast_zero/routes/: recipes.py  users.py
fast_zero/fast_zero/schemas/: recipes.py
fast_zero/migration/: env.py
fast_zero/migration/versions/: 8947302a4dfc_create_users_table.py  eadc874612b9_create_recipes_table.py
fast_zero/migrations/: env.py
fast_zero/tests/: conftest.py  test_app.py
fast_zero/tests/db/: test_db.py
fast_zero/tests/router/: users.py
